# yaft

./: .gitignore  Justfile  README.md  main.py  pyproject.toml  tailwind.config.js
app/: app.py  auth.py  cli.py  common.py  db.py  middleware.py  models.py
app/templates/: App.jinja  Examples.jinja  Index.jinja  Users.jinja
app/templates/components/: Accordian.jinja  AccordianItem.jinja  CopyToClipboard.jinja  Footer.jinja  Layout.jinja  Navbar.jinja  Textarea.jinja  Tracking.jinja
